added css and javascript files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque quam quod perferendis quas nostrum! Quasi aliquid laudantium asperiores accusamus facilis eligendi dolor in sunt, libero, iure error magnam odio, laboriosam odit? Laboriosam illum reprehenderit perspiciatis nobis possimus quia odio excepturi.</p>
         <div>
             <a href="#page-2" class="btn">
-                Next Page<i class=" fas fa-arrow-circle-down" aria-hidden="true"></i>
+                Next Page <i class=" fas fa-arrow-circle-down" aria-hidden="true"></i>
             </a>
         </div>
     </section>
@@ -25,10 +25,10 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque quam quod perferendis quas nostrum! Quasi aliquid laudantium asperiores accusamus facilis eligendi dolor in sunt, libero, iure error magnam odio, laboriosam odit? Laboriosam illum reprehenderit perspiciatis nobis possimus quia odio excepturi.</p>
         <div>
             <a href="#page-1" class="btn btn-dark">
-                Previous<i class=" fas fa-arrow-circle-up" aria-hidden="true"></i>
+                Previous <i class=" fas fa-arrow-circle-up" aria-hidden="true"></i>
             </a>
             <a href="#page-3" class="btn">
-                Page 3<i class=" fas fa-arrow-circle-down" aria-hidden="true"></i>
+                Page 3 <i class=" fas fa-arrow-circle-down" aria-hidden="true"></i>
             </a>
         </div>
     </section>
@@ -38,10 +38,10 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque quam quod perferendis quas nostrum! Quasi aliquid laudantium asperiores accusamus facilis eligendi dolor in sunt, libero, iure error magnam odio, laboriosam odit? Laboriosam illum reprehenderit perspiciatis nobis possimus quia odio excepturi.</p>
         <div>
             <a href="#page-2" class="btn btn-dark">
-                Previous<i class=" fas fa-arrow-circle-up" aria-hidden="true"></i>
+                Previous <i class=" fas fa-arrow-circle-up" aria-hidden="true"></i>
             </a>
             <a href="#page-4" class="btn">
-                Page 4<i class=" fas fa-arrow-circle-down" aria-hidden="true"></i>
+                Page 4 <i class=" fas fa-arrow-circle-down" aria-hidden="true"></i>
             </a>
         </div>
     </section>
@@ -51,12 +51,14 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque quam quod perferendis quas nostrum! Quasi aliquid laudantium asperiores accusamus facilis eligendi dolor in sunt, libero, iure error magnam odio, laboriosam odit? Laboriosam illum reprehenderit perspiciatis nobis possimus quia odio excepturi.</p>
         <div>
             <a href="#page-3" class="btn btn-dark">
-                Previous<i class=" fas fa-arrow-circle-up" aria-hidden="true"></i>
+                Previous <i class=" fas fa-arrow-circle-up" aria-hidden="true"></i>
             </a>
-            <a href="#page-4" class="btn">
-                Home<i class=" fas fa-arrow-circle-up" aria-hidden="true"></i>
+            <a href="#page-1" class="btn">
+                Home <i class=" fas fa-arrow-circle-up" aria-hidden="true"></i>
             </a>
         </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
